--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ PROJECT_NAME="Study Companion Project"
 STACK_NAME=study-companion-project
 
 # Backend
-BACKEND_CORS_ORIGINS="http://localhost,http://localhost:3000,https://localhost,https://localhost:5173,http://localhost.tiangolo.com"
+BACKEND_CORS_ORIGINS="http://localhost,http://localhost:3000,https://localhost,http://localhost.tiangolo.com"
 SECRET_KEY=changethis
 FIRST_SUPERUSER=admin@example.com
 FIRST_SUPERUSER_PASSWORD=changethis
