--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,12 +25,14 @@
     "axios": "^1.12.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "19.1.0",
+    "react-day-picker": "^9.10.0",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "react-feather": "^2.0.10",
