--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -86,6 +86,24 @@ services:
       SMTP_TLS: "false"
       EMAILS_FROM_EMAIL: "noreply@example.com"
 
+  frontend:
+    restart: "no"
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.dev
+    command: ["sh","-lc","pnpm install && pnpm run dev -H 0.0.0.0 -p 3000"]
+    ports:
+      - "3000:3000"
+    environment:
+      NODE_ENV: development
+      NEXT_PUBLIC_BACKEND_BASE_URL: http://localhost:8000
+      NEXT_INTERNAL_BACKEND_BASE_URL: http://backend:8000
+    depends_on:
+      - backend
+    volumes:
+      - ./frontend:/app
+      - frontend_node_modules:/app/node_modules
+
   mailcatcher:
     image: schickling/mailcatcher
     ports:
@@ -96,3 +114,6 @@ networks:
   traefik-public:
     # For local dev, don't expect an external Traefik network
     external: false
+
+volumes:
+  frontend_node_modules:
