Fix incorrect env

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ PROJECT_NAME="Study Companion Project"
 STACK_NAME=study-companion-project
 
 # Backend
-BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,http://localhost:3000,https://localhost,https://localhost:5173,http://localhost.tiangolo.com"
+BACKEND_CORS_ORIGINS="http://localhost,http://localhost:5173,http://localhost:3000,http://localhost:3001,https://localhost,https://localhost:5173,http://localhost.tiangolo.com"
 SECRET_KEY=changethis
 FIRST_SUPERUSER=admin@example.com
 FIRST_SUPERUSER_PASSWORD=changethis
@@ -49,3 +49,5 @@ NEXT_PUBLIC_API_URL=http://localhost:8000
 PINECONE_API_KEY=changethis
 
 OPENAI_API_KEY=changethis
+
+NEXT_PUBLIC_BACKEND_BASE_URL=http://localhost:8000
