--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -86,22 +86,22 @@ services:
       SMTP_TLS: "false"
       EMAILS_FROM_EMAIL: "noreply@example.com"
 
-  # frontend:
-  #   restart: "no"
-  #   build:
-  #     context: ./frontend
-  #     dockerfile: Dockerfile.dev
-  #   command: ["sh","-lc","pnpm install && pnpm run dev -H 0.0.0.0 -p 3000"]
-  #   ports:
-  #     - "3000:3000"
-  #   environment:
-  #     NODE_ENV: development
-  #     NEXT_PUBLIC_BACKEND_BASE_URL: http://localhost:8000
-  #   depends_on:
-  #     - backend
-  #   volumes:
-  #     - ./frontend:/app
-  #     - frontend_node_modules:/app/node_modules
+  frontend:
+    restart: "no"
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.dev
+    command: ["sh","-lc","pnpm install && pnpm run dev -H 0.0.0.0 -p 3000"]
+    ports:
+      - "3000:3000"
+    environment:
+      NODE_ENV: development
+      NEXT_PUBLIC_BACKEND_BASE_URL: http://localhost:8000
+    depends_on:
+      - backend
+    volumes:
+      - ./frontend:/app
+      - frontend_node_modules:/app/node_modules
 
   mailcatcher:
     image: schickling/mailcatcher
