--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "generate-client": "openapi-ts"
+    "generate-client": "openapi-ts && tsx ./src/fix-streaming-types.ts"
   },
   "dependencies": {
     "@hey-api/openapi-ts": "^0.84.0",
@@ -55,6 +55,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "tailwindcss": "^4.1.13",
+    "tsx": "^4.20.6",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   },
