--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "langchain-openai>=0.3.33",
     "langchain-pinecone>=0.2.12",
     "aiofiles>=24.1.0",
+    "tiktoken>=0.5.0",
 ]
 
 [tool.uv]
