--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.2.4",
     "@eslint/eslintrc": "^3",
+    "@next/eslint-plugin-next": "^15.5.4",
     "@tailwindcss/postcss": "^4.1.13",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
