--- a/frontend/package.json
+++ b/frontend/package.json
@@ -55,6 +55,7 @@
     "dotenv": "^17.2.2",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "eslint-plugin-react-hooks": "^6.1.0",
     "tailwindcss": "^4.1.13",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.3.8",
