--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "langchain-pinecone>=0.2.12",
     "aiofiles>=24.1.0",
     "tiktoken>=0.5.0",
+    "numpy>=1.24.0",
 ]
 
 [tool.uv]
