--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "eslint",
     "type-check": "tsc --noEmit",
-    "generate-client": "openapi-ts && tsx ./src/fix-streaming-types.ts"
+    "generate-client": "openapi-ts"
   },
   "dependencies": {
     "@hey-api/openapi-ts": "^0.84.0",
@@ -59,7 +59,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
     "tailwindcss": "^4.1.13",
-    "tsx": "^4.20.6",
     "tw-animate-css": "^1.3.8",
     "typescript": "^5"
   },
